       libssls when we built against an old one on backports.)
    - The manpages are now built with asciidoc, also do that
      at build time so we can properly patch them.  Therefore
      build-depend on asciidoc, and update 03_tor_manpage_in_section_8
      to patch the .txt files now.  Remove tor.1.in torify.1.in
      tor-gencert.1.in tor-resolve.1.in in the doc directory during
      clean.
    - The original design paper is no longer shipped with Tor.  Remove
      debian/hexdump-*.pdf (which we used to work around fig2dev bugs),
      no longer build the paper in debian/rules, and remove it from
      debian/tor.docs.  No longer build-depend on texlive-base-bin,
      texlive-latex-base, texlive-fonts-recommended, transfig and
      ghostscript.

 -- Peter Palfrader <weasel@debian.org>  Sat, 27 Feb 2010 13:52:57 +0100

tor (0.2.2.8-alpha-1) experimental; urgency=low

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Fri, 29 Jan 2010 23:22:35 +0100

tor (0.2.2.7-alpha-2) experimental; urgency=low

  * debian/rules: Minor cleanup (use a single variable for making up our
    configure flags, not two).
  * debian/rules: Remove logic that ignores the result of unit tests if
    localhost does not resolve (or not to 127.0.0.1).  This should no
    longer be necessary as our build chroots have gotten a lot better.
  * Depend on and enable hardening-includes for building.

 -- Peter Palfrader <weasel@debian.org>  Sun, 24 Jan 2010 13:22:26 +0100

tor (0.2.2.7-alpha-1) experimental; urgency=medium

  * New upstream version.
    - Rotate keys (both v3 identity and relay identity) for moria1
      and gabelmoo.
    [and more]

 -- Peter Palfrader <weasel@debian.org>  Wed, 20 Jan 2010 19:29:08 +0100

tor (0.2.2.6-alpha-1) experimental; urgency=low

  * New upstream version.
    - Drop debian/patches/0a58567c-work-with-reneg-ssl.dpatch
      (part of upstream).

 -- Peter Palfrader <weasel@debian.org>  Mon, 23 Nov 2009 18:52:04 +0100
